--- a/AlertFire/templates/newFiles.html
+++ b/AlertFire/templates/newFiles.html
@@ -25,7 +25,7 @@
 <body>
 <div class="image">
 
-                <img alt="" src="static/images/backpic2.jpg" />
+                <img alt="" src="assets/image/backpic2.jpg" />
 
                 <div class="text">
 
